# KKLM

./: CMakeLists.txt  Makefile  README.md  bench_before_after.txt  kklm.h  kllm_bench  kllm_bench_asan  kllm_demo  kllm_test  kllm_test_asan  main.c  mb.h  miko  miko.ckpt  miko_asan  scratch_scale.cpp  test.cpp
bench/: bench.cpp  bench_before_after.txt
examples/: chess.h  main.cpp  miko.cpp
include/kllm/: api.h  config.h  fast_transform.h  fused.h  ir.h  kllm.h  memory.h  ntt.h  onnx.h  parallel.h  profiler.h  quant.h  reward.h  scheduler.h  sketch.h  status.h  training.h  transform_extras.h  utils.h
